service/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
 name: nginx-ingress
 namespace: nginx
spec:
 rules:
 - http:
    paths:
    - pathType: Prefix
      path: /nginx
      backend:    
       service:
        name: nginx-service
        port: 
         number: 80
    - pathType: Prefix
      path: /app
      backend:
       service:
        name: app-service
        port: 
         number: 8000
